# src/presentation/kmc/controllers/dtos/get-cvm-density-query.dto.ts
@@ -1,0 +1,46 @@
+import { Transform } from 'class-transformer';
+import {
+  IsLatLong,
+  IsNumber,
+  IsOptional,
+  Max,
+  Min,
+  Validate,
+} from 'class-validator';
+import { constants } from 'src/lib';
+import { IsBBoxValidConstraint } from 'src/presentation/common/controllers/dtos/validation/is-bbox-valid';
+import { RsqlToMongoQueryResult } from 'src/presentation/common/controllers/filter';
+import { RsqlToMongoKmcCvmTransformer } from '../filter';
+
+export class GetCvmDensityQueryDto {
+  @IsLatLong()
+  @Validate(IsBBoxValidConstraint)
+  public bottomLeft!: string;
+
+  @IsLatLong()
+  @Validate(IsBBoxValidConstraint)
+  public topRight!: string;
+
+  @IsNumber()
+  @Min(0)
+  @Max(constants.MAX_TILE_ZOOM)
+  @Transform(({ value }) => Number(value))
+  public zoom!: number;
+
+  @IsOptional()
+  @Transform(({ value }) => {
+    if (!value) return;
+    return new RsqlToMongoKmcCvmTransformer().transform(value as string);
+  })
+  public filter?: RsqlToMongoQueryResult;
+
+  get bottomLeftCoordinates(): [number, number] {
+    const [latitude, longitude] = this.bottomLeft.split(',').map(Number);
+    return [longitude, latitude];
+  }
+
+  get topRightCoordinates(): [number, number] {
+    const [latitude, longitude] = this.topRight.split(',').map(Number);
+    return [longitude, latitude];
+  }
+}
