# src/presentation/kmc/controllers/stats.controller.ts
@@ -7,6 +7,8 @@ import {
   AggregatedVoteStatsDto,
   AggregatedIdentStatsDto,
   AggregatedJobStatsDto,
+  GetCvmDensityQueryDto,
+  CvmDensityStatsPointDto,
 } from './dtos';
 import {
   GetTotalRegistrationStatsQuery,
@@ -15,9 +17,11 @@ import {
 import {
   CvmTotalVotesStatsProjection,
   CvmTotalRegistrationStatsProjection,
+  CvmDensityStatsPointProjection,
 } from 'src/core/cvm/models';
 import { IdentService } from 'src/core/ident/services';
 import { JobHistoryService } from 'src/infrastructure/scheduling/services';
+import { GetCvmDensityQuery } from 'src/core/cvm/queries/get-density-stats.query';
 
 @Controller({ path: '/kmc/stats', version: '1' })
 @UseGuards(JwtGuard)
@@ -42,6 +46,32 @@ export class StatsController {
     >(registrationQuery);
 
     return registrationResult;
+  }
+
+  @Get('/cvms/density')
+  async getCvmDensity(
+    @Query() queryParams: GetCvmDensityQueryDto,
+  ): Promise<CvmDensityStatsPointDto[]> {
+    const bottomLeft = {
+      longitude: queryParams.bottomLeftCoordinates[0],
+      latitude: queryParams.bottomLeftCoordinates[1],
+    };
+    const topRight = {
+      longitude: queryParams.topRightCoordinates[0],
+      latitude: queryParams.topRightCoordinates[1],
+    };
+
+    const query = new GetCvmDensityQuery(
+      bottomLeft,
+      topRight,
+      queryParams.zoom,
+      queryParams.filter,
+    );
+
+    return this.queryBus.execute<
+      GetCvmDensityQuery,
+      CvmDensityStatsPointProjection[]
+    >(query);
   }
 
   @Get('/votes')
